--- a/yejo/src/main/resources/templates/main/portfolio.html
+++ b/yejo/src/main/resources/templates/main/portfolio.html
@@ -72,139 +72,46 @@
 		<div class="sub-title">
 			<h1>PORTFOLIO</h1>
 		</div>
-		<div class="real-cont">
-			<!--// content -->
-						<!-- 리스트 -->
-						<!-- 
-		<div class="portfolio-list wow fadeIn"  data-wow-delay="0.3s" data-wow-duration="0.8s">
-			<ul>
-									<li>
-						<a href="/portfolio-detail.php?mode=view&listType=&cat_no=&cate=&sw=&sk=&offset=&idx=89">
-							<div class="thumb"><img src="/uploaded/product/89/large_0e50c673eb764082b025de8531c26d680.jpg" alt="거실주방2.jpg"></div>
-							<div class="hover-cont">
-								<div class="tit">서초구 아파트 / 113py</div>
-							</div>
-						</a>
-					</li>
-					
-			
-										<li>
-						<a href="/portfolio-detail.php?mode=view&listType=&cat_no=&cate=&sw=&sk=&offset=&idx=87">
-							<div class="thumb"><img src="/uploaded/product/87/large_78cf6170abd670c5d0efa4d57af3294e0.jpg" alt="240903_yejointerior-110.jpg"></div>
-							<div class="hover-cont">
-								<div class="tit">압구정 현대아파트 / 52py</div>
-							</div>
-						</a>
-					</li>
-					
-			
-										<li>
-						<a href="/portfolio-detail.php?mode=view&listType=&cat_no=&cate=&sw=&sk=&offset=&idx=83">
-							<div class="thumb"><img src="/uploaded/product/83/large_9a2eaf5e9afd7d8d72a703faf4b4dd2c0.jpg" alt="거실5.jpg"></div>
-							<div class="hover-cont">
-								<div class="tit">위시티자이2단지 / 62py</div>
-							</div>
-						</a>
-					</li>
-					
-			
-										<li>
-						<a href="/portfolio-detail.php?mode=view&listType=&cat_no=&cate=&sw=&sk=&offset=&idx=82">
-							<div class="thumb"><img src="/uploaded/product/82/large_6724777f0bcedaa72bceacbae4ed687f0.jpg" alt="거실1.jpg"></div>
-							<div class="hover-cont">
-								<div class="tit">래미안용산더센트럴 / 62py</div>
-							</div>
-						</a>
-					</li>
-					
-			
-										<li>
-						<a href="/portfolio-detail.php?mode=view&listType=&cat_no=&cate=&sw=&sk=&offset=&idx=81">
-							<div class="thumb"><img src="/uploaded/product/81/large_674e80a13de52f6ed8e3970844f58a6b0.jpg" alt="거실3.jpg"></div>
-							<div class="hover-cont">
-								<div class="tit">목동 파라곤 / 86py</div>
-							</div>
-						</a>
-					</li>
-					
-			
-										<li>
-						<a href="/portfolio-detail.php?mode=view&listType=&cat_no=&cate=&sw=&sk=&offset=&idx=80">
-							<div class="thumb"><img src="/uploaded/product/80/large_dde7ce938e086e6a91a30dcaa660ae5f0.jpg" alt="거실4.jpg"></div>
-							<div class="hover-cont">
-								<div class="tit">래미안첼리투스 / 50py</div>
-							</div>
-						</a>
-					</li>
-					
-			
-									</ul>
-			</div>
-
-			<div class="paginate"><a class="direction first disabled" href="#" title='처음페이지'><span>처음페이지</span></a> <strong>1</strong>   <a href="/portfolio.php?cat_no=&sw=&sk=&sNum=&pNum=&offset=6" title='2'>2</a>   <a href="/portfolio.php?cat_no=&sw=&sk=&sNum=&pNum=&offset=12" title='3'>3</a>   <a href="/portfolio.php?cat_no=&sw=&sk=&sNum=&pNum=&offset=18" title='4'>4</a>   <a href="/portfolio.php?cat_no=&sw=&sk=&sNum=&pNum=&offset=24" title='5'>5</a>   <a href="/portfolio.php?cat_no=&sw=&sk=&sNum=&pNum=&offset=30" title='6'>6</a>   <a href="/portfolio.php?cat_no=&sw=&sk=&sNum=&pNum=&offset=36" title='7'>7</a>   <a href="/portfolio.php?cat_no=&sw=&sk=&sNum=&pNum=&offset=42" title='8'>8</a>   <a href="/portfolio.php?cat_no=&sw=&sk=&sNum=&pNum=&offset=48" title='9'>9</a>   <a href="/portfolio.php?cat_no=&sw=&sk=&sNum=&pNum=&offset=54" title='10'>10</a> <a class="direction next" href="/portfolio.php?cat_no=&sw=&sk=&sNum=&pNum=&offset=60" title='다음페이지'><span>다음페이지</span></a><a class="direction last" href="/portfolio.php?cat_no=&sw=&sk=&sNum=&pNum=&offset=60" title='마지막페이지'><span>마지막페이지</span></a>			</div>
-			
-			 -->
-			<!-- 리스트 //-->
-				 <div class="portfolio-list wow fadeIn"  data-wow-delay="0.3s" data-wow-duration="0.8s">
+					<div class="real-cont">
+				<!-- 포트폴리오 리스트 -->
+				<div class="portfolio-list wow fadeIn" data-wow-delay="0.3s" data-wow-duration="0.8s">
 					<ul>
-						<li>
-							<a href="/portfolio-detail">
-								<div class="thumb"><img src="http://yejo7048.cdn1.cafe24.com/images/temp/1.jpg" alt="현장명이"></div>
-								<div class="hover-cont">
-									<div class="tit">현장명이 들어가는 공간입니다. 42PY</div>
-								</div>
-							</a>
-						</li>
-						<li>
-							<a href="/portfolio-detail">
-								<div class="thumb"><img src="http://yejo7048.cdn1.cafe24.com/images/temp/1.jpg" alt="현장명이"></div>
-								<div class="hover-cont">
-									<div class="tit">현장명이 들어가는 공간입니다. 42PY</div>
-								</div>
-							</a>
-						</li>
-						<li>
-							<a href="/portfolio-detail">
-								<div class="thumb"><img src="http://yejo7048.cdn1.cafe24.com/images/temp/1.jpg" alt="현장명이"></div>
-								<div class="hover-cont">
-									<div class="tit">현장명이 들어가는 공간입니다. 42PY</div>
-								</div>
-							</a>
-						</li>
-						<li>
-							<a href="/portfolio-detail">
-								<div class="thumb"><img src="http://yejo7048.cdn1.cafe24.com/images/temp/1.jpg" alt="현장명이"></div>
-								<div class="hover-cont">
-									<div class="tit">현장명이 들어가는 공간입니다. 42PY</div>
-								</div>
-							</a>
-						</li>
-						<li>
-							<a href="/portfolio-detail">
-								<div class="thumb"><img src="http://yejo7048.cdn1.cafe24.com/images/temp/1.jpg" alt="현장명이"></div>
-								<div class="hover-cont">
-									<div class="tit">현장명이 들어가는 공간입니다. 42PY</div>
-								</div>
-							</a>
-						</li>
-						<li>
-							<a href="/portfolio-detail">
-								<div class="thumb"><img src="http://yejo7048.cdn1.cafe24.com/images/temp/1.jpg" alt="현장명이"></div>
-								<div class="hover-cont">
-									<div class="tit">현장명이 들어가는 공간입니다. 42PY</div>
-								</div>
-							</a>
-						</li>
+					    <!-- Thymeleaf 반복문을 사용하여 포트폴리오 목록 출력 -->
+					    <li th:each="portfolio : ${portfolioList}">
+					        <a th:href="@{/portfolio-detail/{id}(id=${portfolio.id})}">
+					            <div class="thumb">
+					                <!-- 포트폴리오 썸네일 이미지 출력 -->
+					                <img th:src="@{${portfolio.thumbnailImage}}" alt="포트폴리오 썸네일">
+					            </div>
+					            <div class="hover-cont">
+					                <!-- 포트폴리오 제목과 면적 표시 -->
+					                <div class="tit" th:text="${portfolio.title} + ' / ' + ${portfolio.area} + 'PY'"></div>
+					            </div>
+					        </a>
+					    </li>
 					</ul>
+					<!-- 포트폴리오가 없을 경우 메시지 표시 -->
+					<div th:if="${portfolioList.empty}">
+					    <p>업로드된 포트폴리오가 없습니다.</p>
+					</div>
 				</div>
 				
+				<!-- 페이지네이션 -->
 				<div class="paginate">
-					<a class="direction first" href="#"><span>처음페이지</span></a><a class="direction prev" href="#"><span>이전페이지</span></a><strong>1</strong><a href="#">2</a><a href="#">3</a><a href="#">4</a><a href="#">5</a><a class="direction next" href="#"><span>다음페이지</span></a><a class="direction last" href="#"><span>마지막페이지</span></a>
-				</div> 
-			<!-- content //-->
+					<a class="direction first" href="#"><span>처음페이지</span></a>
+					<a class="direction prev" href="#"><span>이전페이지</span></a>
+					<strong>1</strong>
+					<a href="#">2</a>
+					<a href="#">3</a>
+					<a href="#">4</a>
+					<a href="#">5</a>
+					<a class="direction next" href="#"><span>다음페이지</span></a>
+					<a class="direction last" href="#"><span>마지막페이지</span></a>
+				</div>
+			</div>
 		</div>
 	</div>
-</div>
+
 <a href="https://open.kakao.com/o/your-openchat-link" target="_blank" class="kakao-btn">
     <img src="http://yejo7048.cdn1.cafe24.com/images/main/free-icon-kakao-talk-3991993.png" alt="카카오톡 오픈채팅" />
 </a>
