배너 기능 완료

--- a/yejo/src/main/resources/templates/main/consultant.html
+++ b/yejo/src/main/resources/templates/main/consultant.html
@@ -192,8 +192,8 @@ function inputNum(obj){
             // '첨부파일 추가' 버튼 클릭 시 이벤트 핸들러
             $("#addFileButton").click(function() {
                 // 새로운 파일 업로드 필드를 생성하여 컨테이너에 추가
-                var newFileInput = '<div class="files-div"><input type="file" name="upfiles[]" class="input" style="width:100%;"></div>';
-                $(".files-container").append(newFileInput);
+                var newbannerImage = '<div class="files-div"><input type="file" name="upfiles[]" class="input" style="width:100%;"></div>';
+                $(".files-container").append(newbannerImage);
             });
         });
 
@@ -201,8 +201,8 @@ function inputNum(obj){
             // '첨부파일 추가' 버튼 클릭 시 이벤트 핸들러
             $("#addFileButton2").click(function() {
                 // 새로운 파일 업로드 필드를 생성하여 컨테이너에 추가
-                var newFileInput = '<div class="files-div"><input type="file" name="upfiles2[]" class="input" style="width:100%;"></div>';
-                $(".files-container2").append(newFileInput);
+                var newbannerImage = '<div class="files-div"><input type="file" name="upfiles2[]" class="input" style="width:100%;"></div>';
+                $(".files-container2").append(newbannerImage);
             });
         });
     </script>
