--- a/yejo/src/main/resources/static/css/bannerManagement.css
+++ b/yejo/src/main/resources/static/css/bannerManagement.css
@@ -1,26 +1,119 @@
 @charset "UTF-8";
 
-td {	
-		font-size : 17px;
-		width : auto;
-		vertical-align: middle; /* 텍스트를 세로 방향으로 가운데 정렬 */
-        text-align: center; /* 텍스트를 가운데 정렬 */
-        line-height : 225px;
-        border: 1px solid #ddd; /* 셀 경계선 추가 (선택 사항) */
-        padding: 8px; /* 셀 안의 여백 */
+td {    
+    font-size: 17px;
+    width: auto;
+    vertical-align: middle; /* 텍스트를 세로 방향으로 가운데 정렬 */
+    text-align: center; /* 텍스트를 가운데 정렬 */
+    line-height: 225px;
+    border: 1px solid #ddd; /* 셀 경계선 추가 (선택 사항) */
+    padding: 8px; /* 셀 안의 여백 */
 }
 
-
 td > a {
-	background-color : white;
-	margin : 0 auto;
-	width : 70px;
-	height : 50px;
-	padding : 10px;
-	border : 1px solid black;
-	cursor: pointer;
+    background-color: white;
+    margin: 0 auto;
+    width: 70px;
+    height: 50px;
+    padding: 10px;
+    border: 1px solid black;
+    cursor: pointer;
 }
 
 td > a:hover {
-	background-color: rgba(0,0,0,0.1);
+    background-color: rgba(0, 0, 0, 0.1);
+}
+
+body {
+    font-family: Arial, sans-serif;
+}
+
+.btn {
+    font-size: 16px;
+    cursor: pointer;
+}
+
+.btn-primary {
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 4px;
+}
+
+.btn-delete {
+	background-color: white;
+	border : 1px solid red;
+	color : #007bff;
+}
+
+.modal {
+    display: none; /* 기본적으로 숨김 */
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.5); /* 반투명 배경 */
+}
+
+.modal-content {
+    background-color: white;
+    margin: 15% auto; /* 화면 가운데 정렬 */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 500px;
+    height: 450px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: relative; /* x 버튼을 절대 위치로 배치하기 위한 설정 */
+}
+
+.close-btn {
+    color: #aaa;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+    position: absolute; /* x 버튼을 절대 위치로 배치 */
+    top: 10px;
+    right: 10px;
+}
+
+.close-btn:hover,
+.close-btn:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.form-control {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 20px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+.drop-zone {
+    width: 100%;
+    height: 250px; /* 드래그앤드롭 영역의 높이를 늘림 */
+    border: 2px dashed #ccc;
+    border-radius: 4px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    color: #ccc;
+    cursor: pointer;
+}
+
+.drop-zone img {
+    max-width: 100%;
+    max-height: 100%;
+    display: none;
 }
