--- a/yejo/src/main/resources/templates/main/portfolio.html
+++ b/yejo/src/main/resources/templates/main/portfolio.html
@@ -83,7 +83,7 @@
 			                        <img th:src="@{${portfolio.thumbnailImage}}" alt="포트폴리오 썸네일">
 			                    </div>
 			                    <div class="hover-cont">
-			                        <div class="tit" th:text="${portfolio.title} + ' / ' + ${portfolio.area} + 'PY'"></div>
+			                        <div class="tit" th:text="${portfolio.title} + ' / ' + ${portfolio.area} + '㎡'"></div>
 			                    </div>
 			                </a>
 			            </li>
